--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,8 +1,7 @@
 {
     "eosio": {
-        "pipeline-branch": "bats-v3",
         "environment": {
-            "IMAGE_TAG": "bats-v3",
+            "IMAGE_TAG": "develop",
             "DEBUG": true
         }
     },
