--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -7,7 +7,7 @@
         }
     },
     "eosio-base-images": {
-        "pipeline-branch": "bats-v3"
+        "pipeline-branch": "develop"
     },
     "eosio-build-unpinned": {
         "pipeline-branch": "protocol-features-sync-nodes"
