--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -6,34 +6,54 @@
             "DEBUG": true
         }
     },
-    "eosio-base-images": {
+    "eosio-base-images":
+    {
         "pipeline-branch": "develop"
     },
-    "eosio-build-unpinned": {
-        "pipeline-branch": "protocol-features-sync-nodes"
+    "eosio-build-unpinned":
+    {
+        "pipeline-branch": "master"
     },
-    "eosio-lrt": {
-        "pipeline-branch": "protocol-features-sync-nodes"
+    "eosio-lrt":
+    {
+        "pipeline-branch": "master",
+        "environment":
+        {
+            "BUILD_FLAGS": "-y -P -m",
+            "IMAGE_TAG": "_1-8-0-rc2"
+        }
     },
-    "eos-multiversion-tests": {
-        "pipeline-branch": "protocol-features-sync-nodes",
-        "configuration": [
+    "eos-multiversion-tests":
+    {
+        "pipeline-branch": "master",
+        "environment":
+        {
+            "IMAGE_TAG": "_1-8-0-rc2"
+        },
+        "configuration":
+        [
             "170=v1.7.0"
         ]
     },
-    "eosio-docker-builds": {
-        "environment": {
+    "eosio-docker-builds":
+    {
+        "environment":
+        {
             "BUILDER_TAG": "v1.8.0"
         }
     },
-    "eosio-sync-tests": {
-        "environment": {
+    "eosio-sync-tests":
+    {
+        "environment":
+        {
             "SKIP_PRE_V180": "true",
             "SKIP_V180": "false"
         }
     },
-    "eosio-replay-tests": {
-        "environment": {
+    "eosio-replay-tests":
+    {
+        "environment":
+        {
             "SKIP_PRE_V180": "true",
             "SKIP_V180": "false"
         }
