eosio pipeline should ALWAYS point to auto-buildkite-pipelines:master

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,9 +1,10 @@
 {
-    "eosio": {
-        "pipeline-branch": "develop",
-        "environment": {
-            "IMAGE_TAG": "develop",
-            "DEBUG": true
+    "eosio":
+    {
+        "pipeline-branch": "master",
+        "environment":
+        {
+            "IMAGE_TAG": "_develop"
         }
     },
     "eosio-base-images":
