--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -4,7 +4,7 @@
         "pipeline-branch": "master",
         "environment":
         {
-            "IMAGE_TAG": "_develop"
+            "IMAGE_TAG": "_2-5"
         }
     },
     "eosio-base-images":
