--- a/block_producer_swap_bot/config.ini
+++ b/block_producer_swap_bot/config.ini
@@ -1,5 +1,5 @@
 [NODES]
-nodeos-url=http://127.0.0.1:8000
-eth-provider=http://mainnet.infura.io/v3/3f98ae6029094659ac8f57f66e673129
-[EOSIO]
+nodeos-url=http://127.0.0.1:8001
+eth-provider=wss://rinkeby.infura.io/ws/v3/3f98ae6029094659ac8f57f66e673129
+[REMIO]
 block-producer-permission=producer111a@active
