--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,10 +1,3 @@
-env:
-  BUILD_TIMEOUT: 120
-  TEST_TIMEOUT: 60
-  TIMEOUT: 120
-  VERBOSE: true
-  DEBUG: true
-
 steps:
   - wait
 
@@ -33,8 +26,6 @@ steps:
             - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
           mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
           propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_AMAZON_LINUX_2
 
   - label: ":centos: CentOS 7 - Build & Test"
     command:
@@ -50,8 +41,6 @@ steps:
             - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
           mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
           propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_CENTOS_7
 
   - label: ":ubuntu: Ubuntu 16.04 - Build & Test"
     agents:
@@ -64,8 +53,6 @@ steps:
             - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
           mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
           propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_UBUNTU_16
 
   - label: ":ubuntu: Ubuntu 18.04 - Build & Test"
     agents:
@@ -78,8 +65,6 @@ steps:
             - "BUILDKITE_AGENT_ACCESS_TOKEN" # Needed for buildkite-agent upload/download
           mount-buildkite-agent: false # Mounting bk-agent doesn't work, so disable it
           propagate-environment: true # Need for buildkite-agent upload/download (JOB_ID, etc)
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_UBUNTU_18
 
   - label: ":darwin: macOS 10.14 - Build & Test"
     command:
@@ -104,24 +89,8 @@ steps:
           wait-network: true
     agents:
       - "queue=mac-anka-large-node-fleet"
-    timeout: $BUILD_TIMEOUT
-    skip: $SKIP_MOJAVE
 
-  - wait:
-    continue_on_failure: true
-
-  # - command: |
-  #     echo '+++ :compression: Extracting Test Metrics Code'
-  #     tar -zxf .cicd/metrics/test-metrics.tar.gz
-  #     echo '+++ :javascript: Running test-metrics.js'
-  #     node --max-old-space-size=32768 test-metrics.js
-  #   label: ":bar_chart: Test Metrics"
-  #   agents:
-  #     queue: "automation-eos-builder-fleet"
-  #   timeout: 10
-  #   soft_fail: true
-
-  # - wait
+  - wait
 
   - label: ":centos: Centos 7 - PB"
     command:
