--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -108,7 +108,7 @@ steps:
 
   - wait
 
-  - label: ":centos: Centos 7.6 - PB"
+  - label: ":centos: Centos 7.6 - Package Builder"
     command:
       - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
@@ -125,7 +125,7 @@ steps:
       queue: "automation-eos-builder-fleet"
     timeout: 10
 
-  - label: ":ubuntu: Ubuntu 16.04 - PB"
+  - label: ":ubuntu: Ubuntu 16.04 - Package Builder"
     command:
       - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
@@ -141,7 +141,7 @@ steps:
       queue: "automation-eos-builder-fleet"
     timeout: 10
 
-  - label: ":ubuntu: Ubuntu 18.04 - PB"
+  - label: ":ubuntu: Ubuntu 18.04 - Package Builder"
     command:
       - "cd /workdir && buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build & Test' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
@@ -157,7 +157,7 @@ steps:
       queue: "automation-eos-builder-fleet"
     timeout: 10
 
-  - label: ":darwin: Mojave - PB"
+  - label: ":darwin: Mojave - Package Builder"
     command:
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build & Test' && tar -xzf build.tar.gz"
